--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-25 (3.0.25.519-0.1.0.46-1) noble; urgency=medium
+
+  * General improvements
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Wed, 30 Apr 2025 13:45:06 +0300
+
 nitrocid-25 (3.0.25.519-0.1.0.45-1) noble; urgency=medium
 
   * Added The Nitrocid Homepage
