--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-27 (3.1.27.49-0.1.2.9-1) noble; urgency=medium
+
+  * General improvements
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Wed, 30 Apr 2025 13:44:29 +0300
+
 nitrocid-27 (3.1.27.49-0.1.2.8-1) noble; urgency=medium
 
   * Added a feature from 0.1.3 (guess what...)
