fin - Finalized changelogs
---

Type: fin
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,10 @@
-We have released this version of Nitrocid to fix some mouse bugs.
+Urban vibes have been added to Nitrocid with a new audio theme, a remix of The Mirage, to celebrate 50,000 views in our blog!
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[*]` Updated Terminaux
+- `[+]` Added a new audio theme
 
 Review the commit history if you want to get a deep insight about the changes.
 
