--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-27 (3.1.27.49-0.1.2.10-1) noble; urgency=medium
+
+  * Added a new audio theme
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Thu, 01 May 2025 12:22:58 +0300
+
 nitrocid-27 (3.1.27.49-0.1.2.9-1) noble; urgency=medium
 
   * General improvements
