fin - Finalized changelogs
---

Type: fin
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-25 (3.0.25.519-0.1.0.47-1) noble; urgency=medium
+
+  * General improvements
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Fri, 16 May 2025 16:14:34 +0300
+
 nitrocid-25 (3.0.25.519-0.1.0.46-1) noble; urgency=medium
 
   * General improvements
