--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,10 @@
-We have released this version of Nitrocid to fix some mouse bugs.
+We have released this version of Nitrocid to improve performance.
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[*]` Updated Terminaux
+- `[*]` General improvements
 
 Review the commit history if you want to get a deep insight about the changes.
 
