add - Added new localized strings
---

We've added new localized strings.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
@@ -4425,6 +4425,10 @@
     "الحصول على معلومات انتهاء صلاحية المنتج",
     "تاريخ الإنتاج (انظر إلى جانب المنتج أو أسفله)",
     "تاريخ الانتهاء أو الفترة الزمنية (سواءً مكتوبة صراحةً في نفس المكان أو فترات زمنية، مثل 6 أشهر أو سنة واحدة)",
-    "هل المنتج المستهدف لا يحدد تاريخ انتهاء الصلاحية صراحةً؟"
+    "هل المنتج المستهدف لا يحدد تاريخ انتهاء الصلاحية صراحةً؟",
+    "حدد نسخة تكوين للتبديل إليها.",
+    "لا يمكن تحديد التكوين",
+    "حدد التكوين",
+    "يُطلب منك تحديد نسخة تكوين"
   ]
 }
