--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/brz.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/brz.json
@@ -4425,6 +4425,10 @@
     "Obtém as informações de validade do produto",
     "Data de produção (consulte a lateral ou a parte inferior do produto)",
     "Data ou período de validade (explicitamente escrito no mesmo local ou em períodos de tempo, como 6 meses ou 1 ano)",
-    "Se o produto-alvo não especifica explicitamente a data de validade"
+    "Se o produto-alvo não especifica explicitamente a data de validade",
+    "Selecione uma instância de configuração para alternar.",
+    "Não é possível selecionar a configuração",
+    "Selecionar configuração",
+    "Solicita que você selecione uma instância de configuração"
   ]
 }
