--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
@@ -4425,6 +4425,10 @@
     "获取产品保质期信息",
     "生产日期（请查看产品侧面或底部）",
     "保质期或跨度（明确写在同一位置或时间段，例如 6 个月或 1 年）",
-    "目标产品是否未明确指定保质期"
+    "目标产品是否未明确指定保质期",
+    "选择要切换到的配置实例。",
+    "无法选择配置",
+    "选择配置",
+    "提示您选择配置实例"
   ]
 }
