--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi.json
@@ -4425,6 +4425,10 @@
     "huòqǔ chǎnpǐn bǎozhìqī xìnxī",
     "shēngchǎn rìqí (qǐng chákàn chǎnpǐn cèmiàn huò dǐbù)",
     "bǎozhìqī huò kuàdù (míngquè xiě zài tóngyī wèizhì huò shíjiān duàn, lìrú 6 gè yuè huò 1 nián)",
-    "mùbiāo chǎnpǐn shìfǒu wèi míngquè zhǐdìng bǎozhìqī"
+    "mùbiāo chǎnpǐn shìfǒu wèi míngquè zhǐdìng bǎozhìqī",
+    "Xuǎnzé yào qiēhuàn dào de pèizhì shílì.",
+    "Wúfǎ xuǎnzé pèizhì",
+    "xuǎnzé pèizhì",
+    "tíshì nín xuǎnzé pèizhì shílì"
   ]
 }
