--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
@@ -4425,6 +4425,10 @@
     "huòqǔ chǎnpǐn dào qí xìnxī",
     "shēngchǎn rìqí (chákàn chǎnpǐn cèmiàn huò dǐbù)",
     "dào qí rì huò shíduàn (míngquè xiě zài tóngyī wèizhì huò shíjiān kuàdù, lìrú 6 gè yuè huò 1 nián)",
-    "mùbiāo chǎnpǐn shìfǒu wèi míngquè zhǐdìng yǒuxiào qíxiàn"
+    "mùbiāo chǎnpǐn shìfǒu wèi míngquè zhǐdìng yǒuxiào qíxiàn",
+    "Xuǎnzé yào qiēhuàn dào de pèizhì shílì.",
+    "Wúfǎ xuǎnzé pèizhì",
+    "xuǎnzé pèizhì",
+    "tíshì nín xuǎnzé pèizhì shílì"
   ]
 }
