--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind-T.json
@@ -4425,6 +4425,10 @@
     "उत्पाद समाप्ति जानकारी प्राप्त करता है",
     "उत्पादन तिथि (उत्पाद के किनारे या नीचे देखें)",
     "समाप्ति तिथि या समय अवधि (या तो एक ही स्थान पर या समय अवधि में स्पष्ट रूप से लिखी गई है, जैसे कि 6 महीने या 1 वर्ष)",
-    "क्या लक्ष्य उत्पाद समाप्ति तिथि को स्पष्ट रूप से निर्दिष्ट नहीं करता है"
+    "क्या लक्ष्य उत्पाद समाप्ति तिथि को स्पष्ट रूप से निर्दिष्ट नहीं करता है",
+    "स्विच करने के लिए कॉन्फ़िगरेशन इंस्टेंस चुनें।",
+    "कॉन्फ़िगरेशन नहीं चुना जा सकता",
+    "कॉन्फ़िगरेशन चुनें",
+    "आपको कॉन्फ़िगरेशन इंस्टेंस चुनने के लिए संकेत देता है"
   ]
 }
