--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind.json
@@ -4425,6 +4425,10 @@
     "utpaad samaapti jaanakaaree praapt karata hai",
     "utpaadan tithi (utpaad ke kinaare ya neeche dekhen)",
     "samaapti tithi ya samay avadhi (ya to ek hee sthaan par ya samay avadhi mein spasht roop se likhee gaee hai, jaise ki 6 maheene ya 1 varsh)",
-    "kya lakshy utpaad samaapti tithi ko spasht roop se nirdisht nahin karata hai"
+    "kya lakshy utpaad samaapti tithi ko spasht roop se nirdisht nahin karata hai",
+    "svich karane ke lie konfigareshan instens chunen.",
+    "konfigareshan nahin chuna ja sakata",
+    "konfigareshan chunen",
+    "aapako konfigareshan instens chunane ke lie sanket deta hai"
   ]
 }
