--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ita.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ita.json
@@ -4425,6 +4425,10 @@
     "Data di produzione (guardare sul lato o sul fondo del prodotto)",
     "Data o periodo di scadenza (scritto esplicitamente nello stesso punto o in intervalli di tempo, come 6 mesi o 1 anno)",
     "Se il prodotto di destinazione non specifica esplicitamente la data di scadenza",
-    "Whether the target product doesn't specify the expiry date explicitly"
+    "Seleziona un'istanza di configurazione a cui passare.",
+    "Impossibile selezionare la configurazione",
+    "Seleziona configurazione",
+    "Ti chiede di selezionare un'istanza di configurazione",
+    "Prompts you to select a configuration instance"
   ]
 }
