--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
@@ -4425,6 +4425,10 @@
     "Отримує інформацію про термін придатності продукту",
     "Дата виробництва (дивіться або збоку, або знизу виробу)",
     "Термін придатності або період часу (або чітко вказано в тому самому місці, або проміжки часу, наприклад 6 місяців або 1 рік)",
-    "Чи в цільовому продукті не вказано чітко термін придатності"
+    "Чи в цільовому продукті не вказано чітко термін придатності",
+    "Виберіть екземпляр конфігурації для переходу.",
+    "Не вдається вибрати конфігурацію",
+    "Виберіть конфігурацію",
+    "Пропонує вибрати екземпляр конфігурації"
   ]
 }
