--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb.json
@@ -4425,6 +4425,10 @@
     "alhusul ealaa maelumat aintiha' salahiat almuntaj",
     "tarikh al'iintaj (anzur 'iilaa janib almuntaj 'aw 'asfalihi)",
     "tarikh alaintiha' 'aw alfatrat alzamania (swa'an maktubat srahtan fi nafs almakan 'aw fatarat zamaniatin, mithl 6 'ashhur 'aw sanat wahidatin)",
-    "hal almuntaj almustahdaf la yuhadid tarikh aintiha' alsalahiat srahtan?"
+    "hal almuntaj almustahdaf la yuhadid tarikh aintiha' alsalahiat srahtan?",
+    "hadad nuskhat takwin liltabdil 'iilayha.",
+    "la yumkin tahdid altakwin",
+    "hadad altakwin",
+    "yutlb mink tahdid nuskhat takwin"
   ]
 }
