--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/fre.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/fre.json
@@ -4425,6 +4425,10 @@
     "Obtention des informations de péremption du produit",
     "Date de production (regarder sur le côté ou le dessous du produit)",
     "Date ou délai de péremption (écrit explicitement au même endroit ou par intervalles de temps, par exemple 6 mois ou 1 an)",
-    "Si le produit cible ne précise pas explicitement la date de péremption"
+    "Si le produit cible ne précise pas explicitement la date de péremption",
+    "Sélectionnez une instance de configuration vers laquelle basculer.",
+    "Impossible de sélectionner la configuration",
+    "Sélectionner la configuration",
+    "Vous invite à sélectionner une instance de configuration."
   ]
 }
