--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
@@ -4425,6 +4425,10 @@
     "製品の有効期限情報を取得します",
     "製造日（製品の側面または底面をご覧ください）",
     "有効期限または期間（同じ場所に明示的に記載されているか、6か月や1年などの期間が記載されているか）",
-    "対象製品に有効期限が明示的に指定されていないかどうか"
+    "対象製品に有効期限が明示的に指定されていないかどうか",
+    "切り替える構成インスタンスを選択してください。",
+    "構成を選択できません",
+    "構成を選択してください",
+    "構成インスタンスを選択するように求められます"
   ]
 }
