--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
@@ -4425,6 +4425,10 @@
     "Exitus ad productum accipit notitia",
     "Productio date (vide vel latus vel imum producti)",
     "Dies elapsus vel temporis periodus (vel expresse scriptus in eodem loco vel spatio temporis, ut 6 menses vel 1 annus)",
-    "Utrum scopum productum non dat terminum expresse"
+    "Utrum scopum productum non dat terminum expresse",
+    "Configurationis exempli gratia ad flectendum est.",
+    "Non potest eligere configuratione",
+    "Configuratione Select",
+    "Monet te eligere configuratione exempli"
   ]
 }
