add - Added the Indonesian language
---

We've added back the Indonesian language under "ndo."

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/Metadata.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/Metadata.json
@@ -130,6 +130,12 @@
         "country": "Malaysia"
     },
     {
+        "three": "ndo",
+        "name": "Indonesian",
+        "transliterable": false,
+        "country": "Indonesia"
+    },
+    {
         "three": "nor",
         "name": "Norwegian",
         "transliterable": false,
