fin - Finalized changelogs
---

Type: fin
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,11 @@
-Urban vibes have been added to Nitrocid with a new audio theme, a remix of The Mirage, to celebrate 50,000 views in our blog!
+This version of Nitrocid incorporates general improvements.
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[+]` Added a new audio theme
+- `[+]` Added Indonesian language
+- `[*]` General improvements
 
 Review the commit history if you want to get a deep insight about the changes.
 
