--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-27 (3.1.27.49-0.1.2.12-1) noble; urgency=medium
+
+  * Fixed shutdown delay
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Sat, 17 May 2025 22:13:30 +0300
+
 nitrocid-27 (3.1.27.49-0.1.2.11-1) noble; urgency=medium
 
   * Added Indonesian language
