fin - Finalized changelogs
---

Type: fin
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,10 @@
-We have released this version of Nitrocid to improve performance.
+We've released an emergency version to fix a bug where shutdown is sometimes delayed 60 seconds.
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[*]` General improvements
+- `[*]` Fixed shutdown delay
 
 Review the commit history if you want to get a deep insight about the changes.
 
