--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-25 (3.0.25.519-0.1.0.48-1) noble; urgency=medium
+
+  * Fixed shutdown delay
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Sat, 17 May 2025 22:14:31 +0300
+
 nitrocid-25 (3.0.25.519-0.1.0.47-1) noble; urgency=medium
 
   * General improvements
