--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-25 (3.0.25.519-0.1.0.49-1) noble; urgency=medium
+
+  * Fixed a serious bug affecting the spinner selector
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Mon, 19 May 2025 12:57:25 +0300
+
 nitrocid-25 (3.0.25.519-0.1.0.48-1) noble; urgency=medium
 
   * Fixed shutdown delay
