--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
@@ -4203,6 +4203,8 @@
     "获取产品保质期信息",
     "生产日期（请查看产品侧面或底部）",
     "保质期或跨度（明确写在同一位置或时间段，例如 6 个月或 1 年）",
-    "目标产品是否未明确指定保质期"
+    "目标产品是否未明确指定保质期",
+    "屏幕保护程序设置...",
+    "这允许您配置日历屏幕保护程序使用的文化"
   ]
 }
