--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
@@ -4203,6 +4203,8 @@
     "huòqǔ chǎnpǐn dào qí xìnxī",
     "shēngchǎn rìqí (chákàn chǎnpǐn cèmiàn huò dǐbù)",
     "dào qí rì huò shíduàn (míngquè xiě zài tóngyī wèizhì huò shíjiān kuàdù, lìrú 6 gè yuè huò 1 nián)",
-    "mùbiāo chǎnpǐn shìfǒu wèi míngquè zhǐdìng yǒuxiào qíxiàn"
+    "mùbiāo chǎnpǐn shìfǒu wèi míngquè zhǐdìng yǒuxiào qíxiàn",
+    "Yíngmù bǎohù chéngshì shèdìng...",
+    "Zhè yǔnxǔ nín pèizhì rìlì yíngmù bǎohù chéngshì shǐyòng de wénhuà"
   ]
 }
