--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ger.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ger.json
@@ -4203,6 +4203,8 @@
     "Ablaufinformationen werden abgerufen",
     "Produktionsdatum (siehe Seite oder Unterseite des Produkts)",
     "Ablaufdatum oder -zeitraum (entweder explizit an derselben Stelle angegeben oder Zeitspannen, z. B. 6 Monate oder 1 Jahr)",
-    "Ob das Zielprodukt das Ablaufdatum nicht explizit angibt"
+    "Ob das Zielprodukt das Ablaufdatum nicht explizit angibt",
+    "Schermbeveiligingsinstellingen...",
+    "Hiermee kunt u de cultuur configureren die door de kalenderschermbeveiliging wordt gebruikt."
   ]
 }
