--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/grk.json
@@ -4203,6 +4203,8 @@
     "Λαμβάνει τις πληροφορίες λήξης του προϊόντος",
     "Ημερομηνία παραγωγής (κοιτάξτε είτε στο πλάι είτε στο κάτω μέρος του προϊόντος)",
     "Ημερομηνία ή χρονική περίοδος λήξης (είτε γράφεται ρητά στο ίδιο σημείο είτε χρονικά διαστήματα, όπως 6 μήνες ή 1 έτος)",
-    "Εάν το προϊόν-στόχος δεν προσδιορίζει ρητά την ημερομηνία λήξης"
+    "Εάν το προϊόν-στόχος δεν προσδιορίζει ρητά την ημερομηνία λήξης",
+    "Ρυθμίσεις προφύλαξης οθόνης...",
+    "Αυτό σας επιτρέπει να διαμορφώσετε την κουλτούρα που χρησιμοποιείται από την προφύλαξη οθόνης ημερολογίου"
   ]
 }
