--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind.json
@@ -4203,6 +4203,8 @@
     "utpaad samaapti jaanakaaree praapt karata hai",
     "utpaadan tithi (utpaad ke kinaare ya neeche dekhen)",
     "samaapti tithi ya samay avadhi (ya to ek hee sthaan par ya samay avadhi mein spasht roop se likhee gaee hai, jaise ki 6 maheene ya 1 varsh)",
-    "kya lakshy utpaad samaapti tithi ko spasht roop se nirdisht nahin karata hai"
+    "kya lakshy utpaad samaapti tithi ko spasht roop se nirdisht nahin karata hai",
+    "skreenasevar setings...",
+    "yah aapako kailendar skreenasevar dvaara upayog kee jaane vaalee sanskrti ko konfigar karane kee anumati deta hai"
   ]
 }
