--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor-T.json
@@ -4203,6 +4203,8 @@
     "제품 유통 기한 정보를 가져옵니다.",
     "생산 날짜(제품 측면 또는 하단 참조)",
     "유통 기한 또는 기간(같은 위치에 명시적으로 기재 또는 6개월 또는 1년과 같은 기간)",
-    "대상 제품이 유통 기한을 명시적으로 지정하지 않는지 여부"
+    "대상 제품이 유통 기한을 명시적으로 지정하지 않는지 여부",
+    "스크린세이버 설정...",
+    "캘린더 스크린세이버에서 사용되는 문화를 구성할 수 있습니다."
   ]
 }
