--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor.json
@@ -4203,6 +4203,8 @@
     "jepum yutong gihan jeongboleul gajyeoobnida.",
     "saengsan naljja(jepum cheugmyeon ttoneun hadan chamjo)",
     "yutong gihan ttoneun gigan(gat-eun wichie myeongsijeog-eulo gijae ttoneun 6gaewol ttoneun 1nyeongwa gat-eun gigan)",
-    "daesang jepum-i yutong gihan-eul myeongsijeog-eulo jijeonghaji anhneunji yeobu"
+    "daesang jepum-i yutong gihan-eul myeongsijeog-eulo jijeonghaji anhneunji yeobu",
+    "seukeulinseibeo seoljeong...",
+    "kaellindeo seukeulinseibeoeseo sayongdoeneun munhwaleul guseonghal su issseubnida."
   ]
 }
