--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
@@ -4203,6 +4203,8 @@
     "Exitus ad productum accipit notitia",
     "Productio date (vide vel latus vel imum producti)",
     "Dies elapsus vel temporis periodus (vel expresse scriptus in eodem loco vel spatio temporis, ut 6 menses vel 1 annus)",
-    "Utrum scopum productum non dat terminum expresse"
+    "Utrum scopum productum non dat terminum expresse",
+    "Screensaver occasus...",
+    "Hoc permittit ut culturam a calendario Screensaverii configurare possit"
   ]
 }
