--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/rmn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/rmn.json
@@ -4203,6 +4203,8 @@
     "Obține informațiile despre expirarea produsului",
     "Data producției (uitați-vă fie pe partea laterală, fie pe partea de jos a produsului)",
     "Data de expirare sau perioada de timp (fie scrisă explicit în același loc sau intervale de timp, cum ar fi 6 luni sau 1 an)",
-    "Dacă produsul țintă nu specifică în mod explicit data de expirare"
+    "Dacă produsul țintă nu specifică în mod explicit data de expirare",
+    "Setări pentru screensaver...",
+    "Acest lucru vă permite să configurați cultura utilizată de screensaver-ul calendarului"
   ]
 }
