--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/tky.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/tky.json
@@ -4203,6 +4203,8 @@
     "Ürün son kullanma bilgilerini alır",
     "Üretim tarihi (ürünün yan tarafına veya altına bakın)",
     "Son kullanma tarihi veya zaman aralığı (aynı yerde açıkça yazılmış veya 6 ay veya 1 yıl gibi zaman aralıkları)",
-    "Hedef ürünün son kullanma tarihini açıkça belirtip belirtmediği"
+    "Hedef ürünün son kullanma tarihini açıkça belirtip belirtmediği",
+    "Ekran koruyucu ayarları...",
+    "Bu, takvim ekran koruyucusu tarafından kullanılan kültürü yapılandırmanıza olanak tanır"
   ]
 }
