--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/vtn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/vtn.json
@@ -4203,6 +4203,8 @@
     "Lấy thông tin hết hạn sản phẩm",
     "Ngày sản xuất (xem ở mặt bên hoặc mặt dưới của sản phẩm)",
     "Ngày hết hạn hoặc khoảng thời gian (được ghi rõ ràng ở cùng một chỗ hoặc khoảng thời gian, chẳng hạn như 6 tháng hoặc 1 năm)",
-    "Sản phẩm mục tiêu có ghi rõ ngày hết hạn không"
+    "Sản phẩm mục tiêu có ghi rõ ngày hết hạn không",
+    "Cài đặt bảo vệ màn hình...",
+    "Điều này cho phép bạn cấu hình văn hóa được sử dụng bởi trình bảo vệ màn hình lịch"
   ]
 }
