--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
@@ -4203,6 +4203,8 @@
     "الحصول على معلومات انتهاء صلاحية المنتج",
     "تاريخ الإنتاج (انظر إلى جانب المنتج أو أسفله)",
     "تاريخ الانتهاء أو الفترة الزمنية (سواءً مكتوبة صراحةً في نفس المكان أو فترات زمنية، مثل 6 أشهر أو سنة واحدة)",
-    "هل المنتج المستهدف لا يحدد تاريخ انتهاء الصلاحية صراحةً؟"
+    "هل المنتج المستهدف لا يحدد تاريخ انتهاء الصلاحية صراحةً؟",
+    "إعدادات شاشة التوقف...",
+    "يتيح لك هذا تهيئة الثقافة المستخدمة في شاشة توقف التقويم."
   ]
 }
