--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt-T.json
@@ -4203,6 +4203,8 @@
     "獲取產品到期信息",
     "生產日期（查看產品側面或底部）",
     "到期日或時段（明確寫在同一位置或時間跨度，例如 6 個月或 1 年）",
-    "目標產品是否未明確指定有效期限"
+    "目標產品是否未明確指定有效期限",
+    "螢幕保護程式設定...",
+    "這允許您配置日曆螢幕保護程式使用的文化"
   ]
 }
