--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/dtc.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/dtc.json
@@ -4203,6 +4203,8 @@
     "Verkrijgt de vervaldatum van het product",
     "Productdatum (kijk naar de zijkant of onderkant van het product)",
     "Vervaldatum of -periode (expliciet op dezelfde plek geschreven of tijdsperioden, zoals 6 maanden of 1 jaar)",
-    "Of het doelproduct de vervaldatum niet expliciet vermeldt"
+    "Of het doelproduct de vervaldatum niet expliciet vermeldt",
+    "Schermbeveiligingsinstellingen...",
+    "Hiermee kunt u de cultuur configureren die door de kalenderschermbeveiliging wordt gebruikt."
   ]
 }
