--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/fre.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/fre.json
@@ -4203,6 +4203,8 @@
     "Obtention des informations de péremption du produit",
     "Date de production (regarder sur le côté ou le dessous du produit)",
     "Date ou délai de péremption (écrit explicitement au même endroit ou par intervalles de temps, par exemple 6 mois ou 1 an)",
-    "Si le produit cible ne précise pas explicitement la date de péremption"
+    "Si le produit cible ne précise pas explicitement la date de péremption",
+    "Paramètres de l'économiseur d'écran…",
+    "Cela vous permet de configurer la culture utilisée par l'économiseur d'écran du calendrier."
   ]
 }
