--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/nor.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/nor.json
@@ -4203,6 +4203,8 @@
     "Får informasjon om produktets utløpsdato",
     "Produksjonsdato (se enten på siden eller bunnen av produktet)",
     "Utløpsdato eller tidsperiode (enten eksplisitt skrevet på samme sted eller tidsrom, for eksempel 6 måneder eller 1 år)",
-    "Om målproduktet ikke spesifiserer utløpsdatoen eksplisitt"
+    "Om målproduktet ikke spesifiserer utløpsdatoen eksplisitt",
+    "Skjermsparerinnstillinger...",
+    "Dette lar deg konfigurere kulturen som brukes av kalenderskjermspareren"
   ]
 }
