--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,10 @@
-We've released a version to update the calendar appearance.
+We've released a version to improve the settings selection logic.
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[*]` Made calendars more gorgeous
+- `[*]` Improved the settings selection logic
 
 Review the commit history if you want to get a deep insight about the changes.
 
